# emeg-fm

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ERPCORE_LUCK_PARITY.md  MOABB_IDENTITY_TRAP_FM_VS_TCM.md  MUON_EXPERIMENT.md  NEUROAI_STACK.md  WEIGHTWATCHER_EEGFM_ANALYSIS.md  donoho_denoise.md  erp_phasereset_handoff.md  neurotechx_dl_eeg_whitepaper.md  simnibs_install_notes.md  smri_pipeline_handoff.md  volume_conduction_plan.md
eeg_fm_spectral/: __init__.py  adapters.py  eeg_fm.py  lora.py  sae.py
emeg_fm/: __init__.py  adapters.py  alljoined.py  cross_modal.py  decoder.py  denoise.py  device.py  eeg_fm.py  fmscope_bridge.py  leadfield.py  lora.py  moabb_cohort.py  montage.py  morphometry.py  natview.py  paper_repro.py  sae.py  stimuli.py  streaming.py  structural.py  tdbrain_cohort.py  variance_partition.py
examples/: eeg_to_fmri_hbn.py
fmscope/: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  VENDORED.md  pyproject.toml
fmscope/docs/: api.md  byo_dataset.md  byo_fm.md  reproducing_paper.md  verdict_rubric.md
fmscope/examples/: byo_dataset_minimal.py  byo_fm_minimal.py
fmscope/fmscope/: __init__.py  api.py
fmscope/fmscope/diagnostics/: __init__.py  direction_consistency.py  erasure.py  layer_probe.py  null_control.py  variance.py
fmscope/fmscope/preprocess/: __init__.py  fooof_ablation.py
fmscope/fmscope/training/: __init__.py  lp.py  svm_probe.py
fmscope/fmscope/verdict/: __init__.py  audit.py
fmscope/reproduction/: README.md
fmscope/reproduction/builders/: _rubric.py  _runtime.py  _style.py  fig2_variance.py  fig3_layerwise.py  fig4a_psd_fooof.py  fig4b_fooof_scatter.py  fig5_direction.py  results_accessor.py  tab1_master.py  tab3_verdict.py  tab_appendix_d.py  tab_appendix_leace_gen.py  tab_leace.py
fmscope/reproduction/notebooks/: fig2_variance.ipynb  fig3_layerwise.ipynb  fig4_psd_fooof.ipynb  fig5_direction.ipynb  tab2_master.ipynb
fmscope/reproduction/tests/: test_erasure_recompute.py  test_paper_reproduce.py  test_results.py
fmscope/scripts/: scrub_check.py
fmscope/tests/: test_audit_cell.py  test_erasure.py  test_variance.py
paper/: build.sh  generate.py  generated_tables.tex  generated_values.tex  math_commands.tex  paper.tex
results/: e4_cross_modal.json  surface_vs_volume.json  tier1_morphometry.json  tier1_variance_partition.json
results/erpcore_luck_parity/: erpcore_luck_parity.csv  erpcore_luck_parity.md  erpcore_luck_parity.saturated_pseudoerp.csv  erpcore_luck_parity.saturated_pseudoerp.md
results/moabb_deconfound/: leaderboard.csv  leaderboard.md
results/moabb_fmscope/: BNCI2014_001-LR.json  leaderboard_erp.csv  leaderboard_erp.md  leaderboard_erp_pertrial.csv  leaderboard_erp_pertrial.md  leaderboard_leftright.csv  leaderboard_leftright.md  leaderboard_leftright_loso.csv  leaderboard_leftright_loso.md  leaderboard_leftright_pertrial.csv  leaderboard_leftright_pertrial.md  leaderboard_ssvep.csv  leaderboard_ssvep.md  leaderboard_ssvep_pertrial.csv  leaderboard_ssvep_pertrial.md  pertrial_erasure_check_stratified-kfold.csv  pertrial_erasure_check_stratified-kfold.md  tcm_pertrial.csv  tcm_pertrial_erp.csv  tcm_pertrial_ssvep.csv
results/moabb_fmscope_diag/: leaderboard_erp.csv  leaderboard_erp.md  leaderboard_leftright.csv  leaderboard_leftright.md  leaderboard_ssvep.csv  leaderboard_ssvep.md
results/paper_repro/: reproduce_ds002893.json  reproduce_ds004148.json  reproduce_ds004362.json
scripts/: _patch_torchaudio_cudacheck.py  alljoined_smoke.sbatch  analyze_eegfm_weightwatcher.py  analyze_eegfm_weightwatcher.sbatch  analyze_reve_weightwatcher.py  audit_moabb_fmscope.py  audit_moabb_fmscope.sbatch  audit_tdbrain_fmscope.py  batch_connectomes.sh  build_4s_morphometry.py  build_connectome.sh  build_eegfm_libs_2606.sh  build_jax_arm64_sif.sbatch  build_leadfield_descriptors.py  build_morphometry.py  build_pytorch_2605_sif.sbatch  build_pytorch_arm64_sif.sbatch  build_reve_sif.sbatch  build_structural_embedding.py  charm_nosurf.ini  compare_surface_volume.py  download_hbn_s3_direct.py  download_hbn_s3_direct.sbatch  download_reve_tiny_open.sbatch  eegfm_t9.sh  erpcore_luck_parity.py  erpcore_luck_parity.sbatch  expy_image_experiment.py  extract_alljoined_reve.py  extract_eeg_fm_acts.py  extract_eeg_fm_acts.sbatch  extract_eeg_fm_acts_local_bids.py  extract_eeg_fm_acts_local_bids.sbatch  fastsurfer_run_one_podman.sh  fastsurfer_run_surfaces_podman.sh  gen_dwi_scalars.py  inspect_openneuro.py  inspect_openneuro.sbatch  lumamba.sbatch  lumamba_brain_age.py  (+56 more)
tests/: test_alljoined.py  test_audit_per_trial.py  test_cross_modal.py  test_decoder.py  test_denoise.py  test_device.py  test_eeg_fm.py  test_erpcore_cross_metric.py  test_fmscope_bridge.py  test_leaderboard_verdict.py  test_leadfield.py  test_lora.py  test_montage.py  test_montage_coords.py  test_morphometry.py  test_natview.py  test_neuralfetch_stage.py  test_paper_repro.py  test_preprocess.py  test_retrieval.py  test_sae.py  test_stimuli.py  test_streaming.py  test_structural.py  test_svm_probe.py  test_tcm_paradigm.py  test_tdbrain_cohort.py  test_variance_partition.py  test_ww_summary_merge.py
